--- a/app/src/main/res/layout/fragment_room_end.xml
+++ b/app/src/main/res/layout/fragment_room_end.xml
@@ -115,7 +115,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:src="@drawable/photo_porsch" />
-
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
@@ -127,7 +126,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
-                        android:padding="20dp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="20dp"
+                        android:paddingEnd="20dp"
+                        android:paddingStart="0dp"
                         android:background="?attr/selectableItemBackground"
                         android:onClick="@{() -> viewHandler.back()}"
                         android:src="@drawable/icon_back" />
